# podcastapp

./: .gitignore  Makefile  README.md  build_and_push.yaml  deploy.yaml  docker-compose.yaml  feedmanager-cli
feedmanager/: Cargo.toml  Dockerfile
feedmanager/config/: log4rs.yaml
feedmanager/src/: add.rs  main.rs  update.rs
feedmanager/src/snapshots/: feedmanager__update__tests__htmlize_amp_escape.snap  feedmanager__update__tests__htmlize_lt_escape.snap  feedmanager__update__tests__htmlize_single_linebreak.snap  feedmanager__update__tests__htmlize_win_linebreaks.snap
webapp/: .dockerignore  .prettierrc  Dockerfile  Makefile  compose-dev.yaml  drizzle.config.ts  eslint.config.js  migrate.Dockerfile  package-lock.json  package.json  setup.d.ts  setup.ts  svelte.config.js  vite.config.ts
webapp/drizzle/: 0000_slimy_george_stacy.sql  0001_even_blink.sql
webapp/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
webapp/src/: app.css  app.d.ts  app.html  hooks.server.ts
webapp/src/lib/: constants.ts  datetime.ts  paths.ts
webapp/src/lib/components/: ActionButton.svelte  BlankSlate.svelte  EpisodeListItem.svelte  Error.svelte  InputBase.svelte  Label.svelte  ListItem.svelte  PageXMargin.svelte  PlaylistButton.svelte  PodcastListItem.svelte  SubscribeButton.svelte
webapp/src/lib/models/: index.ts  unit.test.ts
webapp/src/lib/server/: db-test.ts  db.ts  schema.ts  subqueries.ts
webapp/src/lib/trpc/: client.ts  context.ts  router.ts
webapp/src/routes/: +layout.svelte
webapp/src/routes/(auth)/: +layout.svelte  AuthForm.svelte  (+1 more)
(+61 files in other folders)
