[package]
name = "feedmanager"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4.0.0"
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
log = "0.4.26"
log4rs = { version = "1.3.0", features = ["rolling_file_appender"]}
regex = "1.11.1"
reqwest = "0.12.14"
rss = "2.0.12"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.44.1", features = ["full"] }
voca_rs = "1.15.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3"]}

[dev-dependencies]
insta = { version = "1.42.2", features = ["yaml"] }
